# codex

./: .gitignore  README.md  alembic.ini  pyproject.toml
demo_project/: README.md  __main__.py
demo_project/demo_project/: __init__.py  main.py
ticket_api/: main.py
ticket_api/auth/: auth.py
ticket_api/database/: database.py
ticket_api/migrations/: env.py
ticket_api/migrations/versions/: README
ticket_api/models/: models.py
ticket_api/routes/: __init__.py  batches.py  history.py  reference.py  tickets.py
ticket_api/schemas/: schemas.py
