[tool.poetry]
name = "ticket_api"
version = "0.1.0"
description = "Ticket management API"
authors = ["Codex User <user@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
sqlalchemy = "^2.0.0"
asyncpg = "^0.28.0"
pydantic = "^1.10"
python-dotenv = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
